2009-01-05  Alexey Proskuryakov  <ap@webkit.org>

        Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=23077
        Make application cache use SQLite built-in user_version

        * loader/appcache/ApplicationCacheStorage.cpp:
        (WebCore::ApplicationCacheStorage::verifySchemaVersion): Changed to track versions with
        PRAGMA user_version.

        * loader/appcache/ApplicationCacheResource.h: (WebCore::ApplicationCacheResource::):
        Used the occasion to get rid of the hole in bitmask that was a leftover from opportunistic
        cache entries.

2009-01-04  David Smith  <catfish.man@gmail.com>

        Reviewed by Oliver Hunt.

        Avoid redundant AtomicString conversions

        * dom/Node.cpp:
        (WebCore::Node::getElementsByTagName): Pass starAtom instead of "*"
        (WebCore::Node::getElementsByTagNameNS): Take an AtomicString for the namespace URI
        (WebCore::Node::isDefaultNamespace): Ditto
        (WebCore::Node::lookupPrefix): Ditto
        (WebCore::Node::lookupNamespacePrefix): Ditto
        * dom/Node.h: Ditto

2009-01-04  Darin Adler  <darin@apple.com>

        Reviewed by Oliver Hunt.

        Bug 23105: canvas setFillColor function ignores alpha argument
        https://bugs.webkit.org/show_bug.cgi?id=23105

        Test: fast/canvas/set-colors.html

        * html/CanvasRenderingContext2D.cpp:
        (WebCore::CanvasRenderingContext2D::setFillColor): Pass alpha value through instead
        of ignoring it and always passing 1.

        * html/CanvasStyle.cpp:
        (WebCore::CanvasStyle::applyStrokeColor): Fix spelling of transparent in comments.
        (WebCore::CanvasStyle::applyFillColor): Ditto.

2009-01-04  Darin Adler  <darin@apple.com>

        Bug 23086: REGRESSION(r39540/r39541): Windows build fails due to ICU errors
        https://bugs.webkit.org/show_bug.cgi?id=23086

        * editing/TextIterator.cpp: Check UCONFIG_NO_COLLATION and don't compile