@@ -1,3 +1,11 @@
+2009-01-05  Adam Treat  <treat@kde.org>
+
+        Reviewed by George Staikos.
+
+        Remove unnecessary methods from EmptyFrameLoaderClient
+
+        * loader/EmptyClients.h:
+
 2009-01-05  Alexey Proskuryakov  <ap@webkit.org>
 
         Reviewed by Darin Adler.
